--- a/templates/addbase.html
+++ b/templates/addbase.html
@@ -6,6 +6,7 @@
     <meta http-equiv="=X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
     <title>Adding to Database</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="content">
