--- a/templates/addspell.html
+++ b/templates/addspell.html
@@ -97,7 +97,7 @@
             <th><b>Material Components</b></th>
         </tr>
         <tr>
-            <th><input type=text id="materials" disabled></th>
+            <th><input type=text id="materials" name="materials" disabled></th>
         </tr>   
 </table>
 <br>
