--- a/static/styles.css
+++ b/static/styles.css
@@ -1,21 +1,3 @@
-/*
-#spellsTable table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  #spellsTable td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  #spellsTable tr:nth-child(even) {
-    background-color: #dddddd;
-  }
-*/
-
 #desc {
   width: 100%;
   height: 150px;
@@ -26,15 +8,6 @@
   background-color: #f8f8f8;
   resize: vertical;
 }
-
-/* input, select {
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  resize: none;
-} */
 
 nav ul {
   list-style-type: none;
@@ -60,8 +33,18 @@ nav li a:hover {
   background-color: rgb(165, 165, 165);
 }
 
+#schoolsTable {
+  align-content: center;
+  margin: auto;
+}
+
 #schoolsTable th {
   text-align: center;
+}
+
+#sourceTable {
+  align-content: center;
+  margin: auto;
 }
 
 #sourceTable th{
@@ -103,6 +86,12 @@ nav li a:hover {
   float: right;
 }
 
-.spellAddTable{
+.spellAddTable {
   text-align: left;
+}
+
+#addnew {
+  align-content: center;
+  margin: auto;
+  text-align: center;
 }
