--- a/templates/viewspell.html
+++ b/templates/viewspell.html
@@ -58,6 +58,12 @@
             <input type="submit" value="Delete">
     {% endif %}
 
+    <br>
+
+    <form action="/spells/{{ spell.source.SourceID }}">
+        <input type="submit" value="Back">
+    </form>
+
 {% endfor %}
 
 
